--- a/styles.css
+++ b/styles.css
@@ -1,2 +1,15 @@
 
 /* Your CSS Code here. */
+.holder {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: space-between;
+}
+
+.item {
+  width: calc(33.33% - 10px);
+  margin-bottom: 10px;
+  background-color: #f2f2f2;
+  padding: 10px;
+  box-sizing:border-box;
+}
