--- a/styles.css
+++ b/styles.css
@@ -1,15 +1,12 @@
-
 /* Your CSS Code here. */
-.holder {
-  display: flex;
-  flex-wrap: wrap;
-  justify-content: space-between;
+.one{
+	width:150px;
+/* 	padding:10px; */
 }
-
-.item {
-  width: calc(33.33% - 10px);
-  margin-bottom: 10px;
-  background-color: #f2f2f2;
-  padding: 10px;
-  box-sizing:border-box;
+.holder{
+	display:flex;
+	width:500px;
+	flex-wrap:wrap;
+	flex-direction:row;
+	justify-content:space-evenly;
 }
